--- a/TicTacToePresentation/TicTacToePresentation.csproj
+++ b/TicTacToePresentation/TicTacToePresentation.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -34,6 +35,7 @@
     <TypeScriptCompile Include="wwwroot\Scripts\Lib\angular\angular.d.ts" />
     <TypeScriptCompile Include="wwwroot\Scripts\Lib\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="wwwroot\Scripts\Lib\signalrCore\dist\esm\index.d.ts" />
+    <TypeScriptCompile Include="wwwroot\Scripts\Lib\svgjs\svgjs.d.ts" />
   </ItemGroup>
 
 
